fix(header): All links no displaying on mobile

--- a/sass/assets/styles/_header.scss
+++ b/sass/assets/styles/_header.scss
@@ -106,7 +106,7 @@ header {
       }
     }
 
-    a {
+    a#home {
       display: none !important;
     }
   }
